Revert "Move to the new Java Plugin API"
This reverts commit 75dd1641f0d5a3b9d51399201ddc7f200de800ff.